<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/WelcomePage">

    <fragment
        android:id="@+id/WelcomePage"
        android:name="com.example.myfirstapp.WelcomePage"
        android:label="@string/welcome_page_label"
        tools:layout="@layout/welcome_page">

        <action
            android:id="@+id/action_WelcomePage_to_MealsPage"
            app:destination="@id/MealsPage" />

        <action
            android:id="@+id/action_WelcomePage_to_PlansPage"
            app:destination="@+id/PlansPage" />

        <action
            android:id="@+id/action_WelcomePage_to_SettingsPage"
            app:destination="@+id/SettingsPage" />

    </fragment>



    <fragment
        android:id="@+id/PlansPage"
        android:name="com.example.myfirstapp.PlansPage"
        android:label="@string/plans_page_label"
        tools:layout="@layout/plans_page">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/WelcomePage" />

    </fragment>

    <fragment
        android:id="@+id/MealsPage"
        android:name="com.example.myfirstapp.MealsPage"
        android:label="@string/meals_page_label"
        tools:layout="@layout/meals_page">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/WelcomePage" />

    </fragment>

    <fragment
        android:id="@+id/SettingsPage"
        android:name="com.example.myfirstapp.SettingsPage"
        android:label="@string/settings_page_label"
        tools:layout="@layout/settings">

        <action
            android:id="@+id/action_SettingsPage_to_PersonalSettingsPage"
            app:destination="@id/PersonalSettingsPage" />
        <action
            android:id="@+id/action_SettingsPage_to_PasswordSettingsPage"
            app:destination="@id/PasswordSettingsPage" />
        <action
            android:id="@+id/action_SettingsPage_to_EmailSettingsPage"
            app:destination="@id/EmailSettingsPage" />
        <action
            android:id="@+id/action_SettingsPage_to_FeedbackSettingsPage"
            app:destination="@id/FeedbackSettingsPage" />
        <action
            android:id="@+id/action_SettingsPage_to_termsAndConditions"
            app:destination="@id/termsAndConditions" />

    </fragment>

    <fragment
        android:id="@+id/PersonalSettingsPage"
        android:name="com.example.myfirstapp.PersonalSettings"
        android:label="@string/personal_settings_page_label">

    </fragment>

    <fragment
        android:id="@+id/PasswordSettingsPage"
        android:name="com.example.myfirstapp.PasswordSettings"
        android:label="@string/password_settings_page_label">

    </fragment>

    <fragment
        android:id="@+id/EmailSettingsPage"
        android:name="com.example.myfirstapp.EmailSettings"
        android:label="@string/email_settings_page_label">

    </fragment>

    <fragment
        android:id="@+id/FeedbackSettingsPage"
        android:name="com.example.myfirstapp.Feedback"
        android:label="@string/feedback_settings_page_label">

    </fragment>

    <fragment
        android:id="@+id/termsAndConditions"
        android:name="com.example.myfirstapp.TermsAndConditions"
        android:label="@string/terms_and_conditions_settings_page_label">

    </fragment>

</navigation>