<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/MealOptionName"
        android:layout_width="395dp"
        android:layout_height="75dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/meal_option_one_name"
        android:textColor="#0B0A0A"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="192dp"
        android:layout_height="177dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MealOptionName"
        app:srcCompat="@drawable/chicken_parm" />

    <TextView
        android:id="@+id/NutritionalInfo"
        android:layout_width="419dp"
        android:layout_height="44dp"
        android:layout_marginTop="176dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/nutritional_info"
        android:textColor="#090909"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MealOptionName" />

    <TextView
        android:id="@+id/Calories"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/calories"
        android:textColor="#121111"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NutritionalInfo" />

    <TextView
        android:id="@+id/fat"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="20dp"
        android:text="@string/fat"
        android:textColor="#121111"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Calories" />

    <TextView
        android:id="@+id/saturatedFat"
        android:layout_width="99dp"
        android:layout_height="23dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="20dp"
        android:text="@string/saturated_fat"
        android:textColor="#121111"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fat" />

    <TextView
        android:id="@+id/carbohydrates"
        android:layout_width="106dp"
        android:layout_height="20dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/carbohydrates"
        android:textColor="#121111"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saturatedFat" />

    <TextView
        android:id="@+id/fiber"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="18dp"
        android:text="@string/fiber"
        android:textColor="#121111"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carbohydrates" />

    <TextView
        android:id="@+id/sugar"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/sugar"
        android:textColor="#121111"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiber" />

    <TextView
        android:id="@+id/protein"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/protein"
        android:textColor="#121111"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sugar" />

    <TextView
        android:id="@+id/allergies"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/allergies"
        android:textColor="#121111"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/protein" />

    <TextView
        android:id="@+id/MealCalories"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="192dp"
        android:text="@string/calories1"
        android:textColor="#090909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Calories"
        app:layout_constraintTop_toBottomOf="@+id/NutritionalInfo" />

    <TextView
        android:id="@+id/mealFat"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="192dp"
        android:text="@string/fat1"
        android:textColor="#090909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/fat"
        app:layout_constraintTop_toBottomOf="@+id/MealCalories" />

    <TextView
        android:id="@+id/mealSaturatedFat"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="192dp"
        android:text="@string/saturated_fat1"
        android:textColor="#090909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/saturatedFat"
        app:layout_constraintTop_toBottomOf="@+id/mealFat" />

    <TextView
        android:id="@+id/mealCarbohydrates"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="100dp"
        android:text="@string/carbohydrates1"
        android:textColor="#090909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/carbohydrates"
        app:layout_constraintTop_toBottomOf="@+id/mealSaturatedFat" />

    <TextView
        android:id="@+id/mealFiber"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="100dp"
        android:text="@string/fiber1"
        android:textColor="#090909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/fiber"
        app:layout_constraintTop_toBottomOf="@+id/mealCarbohydrates" />

    <TextView
        android:id="@+id/mealSugar"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="192dp"
        android:text="@string/sugar1"
        android:textColor="#090909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/sugar"
        app:layout_constraintTop_toBottomOf="@+id/mealFiber" />

    <TextView
        android:id="@+id/mealProtein"
        android:layout_width="90dp"
        android:layout_height="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="192dp"
        android:text="@string/protein1"
        android:textColor="#090909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/protein"
        app:layout_constraintTop_toBottomOf="@+id/mealSugar" />

    <TextView
        android:id="@+id/mealAllergy"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="196dp"
        android:text="@string/allergies1"
        android:textColor="#090909"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/allergies"
        app:layout_constraintTop_toBottomOf="@+id/mealProtein" />

</androidx.constraintlayout.widget.ConstraintLayout>